--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,34 @@
 				<configuration>
 				</configuration>
 			</plugin>
+		
+		
+		<plugin>
+				<groupId>org.mule.tools.maven</groupId>
+				<artifactId>mule-maven-plugin</artifactId>
+				<version>2.2.1</version>
+				<configuration>
+					<deploymentType>cloudhub</deploymentType>
+					<!-- muleVersion is the runtime version as it appears on the CloudHub interface -->
+					<muleVersion>4.1.4</muleVersion>
+					<username>${uid}</username>
+					<password>${pwd}</password>
+					<redeploy>true</redeploy>
+					<environment>Sandbox</environment>
+					<uri>https://eu1.anypoint.mulesoft.com</uri>
+					<region>eu-central-1</region>
+					<!--<businessGroup>AcmeEurope</businessGroup> -->
+				</configuration>
+				<executions>
+					<execution>
+						<id>deploy</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
