--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 						<muleVersion>${app.runtime}</muleVersion>
 						<username>${username}</username>
 						<password>${password}</password>
-						<applicationName>${project.artifactId}-farhad</applicationName>
+						<applicationName>${project.artifactId}</applicationName>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<region>eu-central-1</region>
 						<environment>${environment}</environment>
