--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 						<environment>${environment}</environment>
 						<businessGroup>SAP and SF Demo</businessGroup>
 						<properties>
-							<key>anypoint.platform.config.analytics.agent.enabled=true</key>
+							<anypoint.platform.config.analytics.agent.enabled>=true</anypoint.platform.config.analytics.agent.enabled>
 						</properties>
 					</cloudHubDeployment>
 				</configuration>
